tests/baselines/reference/extendsUntypedModule(strict=true).errors.txt
/a.ts(1,17): error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
/a.ts(2,1): error TS6133: 'Bar' is declared but its value is never read.
/a.ts(2,17): error TS7016: Could not find a declaration file for module 'bar'. '/node_modules/bar/index.js' implicitly has an 'any' type.


==== /a.ts (3 errors) ====
    import Foo from "foo";
                    ~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
    import Bar from "bar"; // error: unused
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'Bar' is declared but its value is never read.
                    ~~~~~
!!! error TS7016: Could not find a declaration file for module 'bar'. '/node_modules/bar/index.js' implicitly has an 'any' type.
    export class A extends Foo { }
    
==== /node_modules/foo/index.js (0 errors) ====
    This file is not read.
    
==== /node_modules/bar/index.js (0 errors) ====
    Nor is this one.
    